@@ -1,59 +1,115 @@
 package com.example.minimart.order.application;
 
+import com.example.minimart.order.controller.dto.request.CreateOrderItemRequest;
 import com.example.minimart.order.controller.dto.request.CreateOrderRequest;
-import com.example.minimart.order.infra.OrderItemJpaRepository;
-import com.example.minimart.order.infra.OrderJpaRepository;
-import com.example.minimart.order.infra.entity.OrderEntity;
-import com.example.minimart.order.infra.entity.OrderItemEntity;
-import com.example.minimart.order.infra.entity.OrderStatus;
+import com.example.minimart.order.domain.Order;
+import com.example.minimart.order.domain.OrderItem;
+import com.example.minimart.order.domain.OrderRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Transactional
 @Service
 public class OrderService {
 
-    private final OrderJpaRepository orderJpaRepository;
-    private final OrderItemJpaRepository orderItemJpaRepository;
+    private OrderRepository orderRepository;
 
-    public OrderService(OrderJpaRepository orderJpaRepository, OrderItemJpaRepository orderItemJpaRepository) {
-        this.orderJpaRepository = orderJpaRepository;
-        this.orderItemJpaRepository = orderItemJpaRepository;
+    public OrderService(OrderRepository orderRepository) {
+        this.orderRepository = orderRepository;
     }
 
-    public OrderEntity getOrder(Long id) {
-        return orderJpaRepository.findById(id)
+    public Order getOrder(Long id) {
+        return orderRepository.findById(id)
             .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다. 주문 ID: " + id));
     }
 
-    public void createOrder(CreateOrderRequest request) {
-        OrderEntity order = new OrderEntity(
-            request.getCustomerId(),
-            request.getTotalPrice(),
-            OrderStatus.PENDING
-        );
+    @Transactional
+    public Order createOrder(CreateOrderRequest request) {
+        try {
+            validateCustomerId(request.getCustomerId());
+            validateTotalPrice(request.getTotalPrice());
+            validateOrderItems(request.getItems());
 
-        OrderEntity savedOrder = orderJpaRepository.save(order);
-        Long orderId = savedOrder.getId();
+            // Request DTO -> OrderItem Domain
+            List<OrderItem> orderItems = request.getItems().stream()
+                .map(item -> {
+                    validateProductId(item.getProductId());
+                    validateProductName(item.getProductName());
+                    validateUnitPrice(item.getPrice());
+                    validateQuantity(item.getQuantity());
 
-        List<OrderItemEntity> orderItems = request.getItems().stream()
-            .map(item -> new OrderItemEntity(
-                orderId,
-                item.getProductId(),
-                item.getProductName(),
-                item.getOption(),
-                item.getPrice(),
-                item.getQuantity()
-            ))
-            .toList();
+                    return OrderItem.create(
+                        item.getProductId(),
+                        item.getProductName(),
+                        item.getOption(),
+                        item.getPrice(),
+                        item.getQuantity()
+                    );
+                })
+                .collect(Collectors.toList());
 
-        orderItemJpaRepository.saveAll(orderItems);
+            // Request DTO -> Order Domain
+            Order order = Order.create(
+                request.getCustomerId(),
+                request.getTotalPrice(),
+                orderItems
+            );
+
+            return orderRepository.save(order);
+        } catch (IllegalArgumentException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new RuntimeException("주문 저장 중 오류 발생 - 고객 ID: " + request.getCustomerId(), e);
+        }
     }
 
-    public List<OrderEntity> listOrders() {
-        return orderJpaRepository.findAll();
+    public List<Order> listOrders() {
+        return orderRepository.findAll();
+    }
+
+    private void validateCustomerId(Long customerId) {
+        if (customerId == null || customerId <= 0) {
+            throw new IllegalArgumentException("고객 ID는 0보다 커야 합니다.");
+        }
+    }
+
+    private void validateTotalPrice(BigDecimal totalPrice) {
+        if (totalPrice == null || totalPrice.compareTo(BigDecimal.ZERO) < 0) {
+            throw new IllegalArgumentException("총 주문 금액은 0보다 크거나 같아야 합니다.");
+        }
+    }
+
+    private void validateOrderItems(List<CreateOrderItemRequest> items) {
+        if (items == null || items.isEmpty()) {
+            throw new IllegalArgumentException("주문 항목은 최소 1개 이상이어야 합니다.");
+        }
+    }
+
+    private void validateProductId(Long productId) {
+        if (productId == null || productId <= 0) {
+            throw new IllegalArgumentException("상품 ID는 0보다 커야 합니다.");
+        }
+    }
+
+    private void validateProductName(String productName) {
+        if (productName == null || productName.trim().isEmpty()) {
+            throw new IllegalArgumentException("상품 이름은 비어 있을 수 없습니다.");
+        }
+    }
+
+    private void validateUnitPrice(BigDecimal unitPrice) {
+        if (unitPrice == null || unitPrice.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("단가는 0보다 커야 합니다.");
+        }
+    }
+
+    private void validateQuantity(int quantity) {
+        if (quantity <= 0) {
+            throw new IllegalArgumentException("수량은 0보다 커야 합니다.");
+        }
     }
 
 }
